# cudajit

./: CMakeLists.txt  main.cpp
cuda/: example.cu
